add spotify file

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # Spotify API keys
 
-SPOTIFY_ID=your-spotify-id
-SPOTIFY_SECRET=your-spotify-secret
+SPOTIFY_ID= 4ff361c426284f7dac5e0da14a99eb1b
+SPOTIFY_SECRET= f62eb0f082114b418421cb2f1752f936
